[package]
name = "guessing-game-bot"
version = "0.1.0"
edition = "2018"
authors = ["Alex Black <wa7@sa34.cx>"]
description = "I'll fill it in later..."
license = "MIT"
repository = "https://github.com/wa7sa34cx/guessing-game-bot"
readme = "README.md"

[dependencies]
teloxide = { version = "0.5.2", features = ["auto-send", "macros"] }
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }